objects/CC_Document_Validation__mdt.object
<CustomObject>
    <description>This setting manages the required configuration data for document upload</description>
    <fields>
        <fullName>Document_Types__c</fullName>
        <label>Document Types</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <referenceTo>CC_Module__mdt</referenceTo>
        <relationshipLabel>Document Validations</relationshipLabel>
        <relationshipName>Document_Validations</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Needed_Document__c</fullName>
        <label>Needed Document</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Document Validation</label>
    <pluralLabel>Document Validations</pluralLabel>
    <validationRules>
        <fullName>Document_Types_Required</fullName>
        <active>true</active>
        <errorConditionFormula>TRIM(Document_Types__c  ) == &apos;&apos;</errorConditionFormula>
        <errorDisplayField>Document_Types__c</errorDisplayField>
        <errorMessage>Cannot be blank</errorMessage>
    </validationRules>
</CustomObject>